[build-system]
requires = [
    "pip>=23.1.0",
    "wheel",
    "setuptools>=60.9.0", 
    "setuptools-scm>=3.3.3",
    "cython>=0.29.0,<3",
    "numpy>=1.19.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "zipline_pipeline"

dynamic = ["version","readme",]
description = "Zipline based pipeline engine."
keywords = ["trading", "python", "algo", "quant", "systematic", "backtesting"]
authors = [
    {name = "QuantInsti Quantitative Learnings Pvt Ltd.", email = "blueshift-dev@quantinsti.com"},
]
license = {file = 'LICENSE'}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Cython",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial",
    "Intended Audience :: Financial and Insurance Industry"
]
dependencies = [
    "numpy>=1.19.0",
    "pandas>=1.1.5",
    "toolz>=0.9.0",
    "numexpr>=2.6.0",
    "h5py>=2.10.0",
    "scipy>=1.5.0",
    "scikit-learn>=0.24.0",
    "iso3166",
    "iso4217",
    "logbook",
    "python-interface==1.5.3",
]

[project.urls]
homepage = "https://blueshift.quantinsti.com"
documentation = "https://blueshift.quantinsti.com/api-docs/introduction.html"
repository = "https://github.com/QuantInsti/blueshift-demo-strategies"

[tool.setuptools.exclude-package-data]
"*" = ["*.c", "*.h", "*.cpp"]